@@ -4,6 +4,9 @@ Flusspferd Change Log
 Release 0.9
 -----------
 
+2009-10-30:
+- Boost 1.40 required.
+
 2009-10-25:
 - Better toString and toSource for native objects (#139).
 - Allow enabling the Tracemonkey JIT mode from C++ (#140).
